--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,23 @@
-titanium.mp3
 biryani.jpg
 ContactUs_Page.png
-Cuisine_Page.png
-curry.jpg
-dal_lake.jpg
-dance.jpg
-diwali.jpg
-dosa.jpg
-gulab_jamun.jpg
-Home_Page.png
 india_map.jpg
-Landmark_Page.png
+Home_Page.png
+gulab_jamun.jpg
+dosa.jpg
+diwali.jpg
+dance.jpg
+dal_lake.jpg
+curry.jpg
+Cuisine_Page.png
 qutubminar.jpg
-redfort.jpg
+Landmark_Page.png
+java project instruction.pdf
 saree.jpg
 street_food.jpg
 tajmahal.jpg
+titanium.mp3
 Web_Design_Project_Instruction.pdf
-java project instruction.pdf
+HTML project/.gitignore
+redfort.jpg
+fb logo.jpg
+insta logo.jpg
