project coompleted with html and css on 17-02-2025

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ HTML project/.gitignore
 redfort.jpg
 fb logo.jpg
 insta logo.jpg
+Taj Mahal, Agra, Uttar Pradesh, India.jpeg
+Qutub Minar.jpeg
+indiamap.jpeg
