created some changes into project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.class
 biryani.jpg
 ContactUs_Page.png
 india_map.jpg
@@ -11,7 +12,6 @@ curry.jpg
 Cuisine_Page.png
 qutubminar.jpg
 Landmark_Page.png
-java project instruction.pdf
 saree.jpg
 street_food.jpg
 tajmahal.jpg
